--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="con" path="org.lejos.ev3.ldt.LEJOS_EV3_LIBRARY_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/[2] study/[2] DHBW/[5] 5. Semester [WS1617]/[7] Studienarbeit/Tools/libs/EV3JLibA/lib/EV3JLibA.jar"/>
 	<classpathentry kind="output" path="target/"/>
 </classpath>
